--- a/catalog.html
+++ b/catalog.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 
 <head>
-  <meta charset="utf-8">
-  <title>Дизайн-студия Нёрдс</title>
+  <meta charset="UTF-8">
+  <title>Магазинt</title>
 </head>
 
 <body>
