Добавил блок преимущества в index.html

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
       <a href="">Корзина</a>
     </nav>
   </header>
+  <main>
+    <h1>Дизайн-студия Hёрдс</h1>
+    <section>
+      <h2>Преимущества</h2>
+      <p><strong>Долго, дорого, скрупулезно</strong></p>
+      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+      <a href="">Узнать больше</a>
+      <img src="https://via.placeholder.com/760x431" alt="nerds-index-slide1">
+    </section>
+  </main>
 </body>
 
 </html>
