Добавил блок Особенности

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
       <a href="">Узнать больше</a>
       <img src="https://via.placeholder.com/760x431" alt="nerds-index-slide1">
     </section>
+    <section>
+      <h2>Особенности</h2>
+      <ul>
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="illustration-1">
+          <h2>Веб-сайты</h2>
+          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a href="">Заказать</a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="illustration-2">
+          <h2>Приложения</h2>
+          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a href="">Заказать</a>
+        </li>
+        <li>
+          <img src="https://via.placeholder.com/300x146" alt="illustration-3">
+          <h2>Презентации</h2>
+          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a href="">Заказать</a>
+        </li>
+      </ul>
+    </section>
   </main>
 </body>
 
