--- a/index.html
+++ b/index.html
@@ -33,23 +33,26 @@
       <ul>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="illustration-1">
-          <h2>Веб-сайты</h2>
+          <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="">Заказать</a>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="illustration-2">
-          <h2>Приложения</h2>
+          <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="">Заказать</a>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="illustration-3">
-          <h2>Презентации</h2>
+          <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a href="">Заказать</a>
         </li>
       </ul>
+    </section>
+    <section>
+      <
     </section>
   </main>
 </body>
