Добавил блок О нас

--- a/index.html
+++ b/index.html
@@ -52,7 +52,29 @@
       </ul>
     </section>
     <section>
-      <
+      <h2>О нас</h2>
+      <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p><b>Выполняем заказы на разработку:</b></p>
+      <ul>
+        <li>Веб-сайтов любой сложности</li>
+        <li>Мобильных приложений для iOS и Android</li>
+        <li>Слайдшоу и видео для корпоративных прецентаций</li>
+      </ul>
+      <img src="https://via.placeholder.com/360x208" alt="nerds-illustration 1">
+      <p>с 2004 года Любим точность во всем:</p>
+      <table>
+        <tr>
+          <td>146%</td>
+          <td>100%</td>
+          <td>50%</td>
+        </tr>
+        <tr>
+          <td>Уровень самоотдачи</td>
+          <td>Соблюдение сроков</td>
+          <td>Минимальная предоплата</td>
+        </tr>
+      </table>
     </section>
   </main>
 </body>
