Добавил блок Логотипы сайтов

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     <section>
       <h2>О нас</h2>
       <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+        рук, как роботы.</p>
       <p><b>Выполняем заказы на разработку:</b></p>
       <ul>
         <li>Веб-сайтов любой сложности</li>
@@ -75,6 +76,14 @@
           <td>Минимальная предоплата</td>
         </tr>
       </table>
+    </section>
+    <section>
+      <h2>Логотипы сайтов</h2>
+      <a href=""><img src="https://via.placeholder.com/199x67" alt="logo-1"></a>
+      <a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a>
+      <a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a>
+      <a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a>
+
     </section>
   </main>
 </body>
