--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
           <img src="https://via.placeholder.com/300x146" alt="illustration-1">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="">Заказать</a>
+          <a href="catalog.html">Заказать</a>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="illustration-2">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="">Заказать</a>
+          <a href="catalog.html">Заказать</a>
         </li>
         <li>
           <img src="https://via.placeholder.com/300x146" alt="illustration-3">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a href="">Заказать</a>
+          <a href="catalog.html">Заказать</a>
         </li>
       </ul>
     </section>
@@ -83,9 +83,28 @@
       <a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a>
       <a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a>
       <a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a>
-
     </section>
   </main>
+  <footer>
+    <section>
+      <h2>Как нас найти?</h2>
+      <p><b>NЁRDS DESIGN STUDIO</b></p>
+      <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8</p>
+      <p>тел. +7 (812) 275-75-75</p>
+      <a href="">Напишите нам</a>
+    </section>
+    <section>
+      <h2>Ссылки на социальные сети</h2>
+      <ul>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="vk-icon"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="fb-icon"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="insta-icon"></a></li>
+      </ul>
+    </section>
+    <p><b>Давайте дружить, это выгодно!</b></p>
+    <p>Скидка 10% для друзей из социальных сетей</p>
+  </footer>
 </body>
 
 </html>
