--- a/catalog.html
+++ b/catalog.html
@@ -8,17 +8,11 @@
 
 <body>
   <header>
-    <nav>
-      <a><img src="https://via.placeholder.com/159x65" alt="nerds-logo"></a>
-      <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-      <a href="">Корзина</a>
-    </nav>
   </header>
+  <main>
+  </main>
+  <footer>
+  </footer>
 </body>
 
 </html>
