Добавил ссылку к logo-1

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <section>
       <h2>Логотипы сайтов</h2>
-      <a href=""><img src="https://via.placeholder.com/199x67" alt="logo-1"></a>
+      <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/199x67" alt="logo-1"></a>
       <a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a>
       <a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a>
       <a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a>
