Внес рекомендованные наставником правки

--- a/index.html
+++ b/index.html
@@ -26,25 +26,21 @@
       <p><strong>Долго, дорого, скрупулезно</strong></p>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
       <a href="">Узнать больше</a>
-      <img src="https://via.placeholder.com/760x431" alt="nerds-index-slide1">
     </section>
     <section>
       <h2>Особенности</h2>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="illustration-1">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
           <a href="catalog.html">Заказать</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="illustration-2">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
           <a href="catalog.html">Заказать</a>
         </li>
         <li>
-          <img src="https://via.placeholder.com/300x146" alt="illustration-3">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
           <a href="catalog.html">Заказать</a>
@@ -79,10 +75,12 @@
     </section>
     <section>
       <h2>Логотипы сайтов</h2>
-      <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/199x67" alt="logo-1"></a>
-      <a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a>
-      <a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a>
-      <a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a>
+      <ul>
+        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/199x67" alt="logo-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a></li>
+      </ul>
     </section>
   </main>
   <footer>
