--- a/catalog.html
+++ b/catalog.html
@@ -8,10 +8,73 @@
 
 <body>
   <header>
+    <nav>
+      <a><img src="https://via.placeholder.com/159x65" alt="nerds-logo"></a>
+      <ul>
+        <li><a href="index.html">Студия</a></li>
+        <li><a href="">Клиенты</a></li>
+        <li><a>Магазин</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+      <a href="">Корзина</a>
+    </nav>
   </header>
   <main>
+    <h1>Магазин готовых шаблонов</h1>
+    <section>
+      <h2>Фильтр товаров</h2>
+      <!--Здесь будет форма-->
+    </section>
+    <section>
+      <h2>Сортировка</h2>
+      <p>Сортировать:</p>
+      <ul>
+        <li><a href="">По цене</a></li>
+        <li><a href="">По типу </a></li>
+        <li><a href="">По названию</a></li>
+      </ul>
+      <ul>
+        <li><a href=""></a></li><!--Здесь будет стрелка вниз-->
+        <li><a href=""></a></li><!--Здесь будет стрелка вверх-->
+      </ul>
+    </section>
+    <section>
+      <h2>Список товаров</h2>
+      <ul>
+        <li><a href=""><img src="https://via.placeholder.com/360x580" alt="sedona-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="pink-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="barbershop-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="mishka-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="aplus-1"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="kvast-1"></a></li>
+      </ul>
+      <ul>
+        <li><a>1</a></li>
+        <li><a href="">2</a></li>
+        <li><a href="">3</a></li>
+        <li><a href="">Следующая</a></li>
+      </ul>
+    </section>
   </main>
   <footer>
+    <section>
+      <h2>Как нас найти?</h2>
+      <p><b>NЁRDS DESIGN STUDIO</b></p>
+      <p>191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8</p>
+      <p>тел. +7 (812) 275-75-75</p>
+      <a href="">Напишите нам</a>
+    </section>
+    <section>
+      <h2>Ссылки на социальные сети</h2>
+      <ul>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="vk-icon"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="fb-icon"></a></li>
+        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="insta-icon"></a></li>
+      </ul>
+    </section>
+    <p><b>Давайте дружить, это выгодно!</b></p>
+    <p>Скидка 10% для друзей из социальных сетей</p>
   </footer>
 </body>
 
