Убрал img из блока социальных ссылок и ссылки в карточках товаров

--- a/catalog.html
+++ b/catalog.html
@@ -41,12 +41,12 @@
     <section>
       <h2>Список товаров</h2>
       <ul>
-        <li><a href=""><img src="https://via.placeholder.com/360x580" alt="sedona-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="pink-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="barbershop-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="mishka-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="aplus-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/358x578" alt="kvast-1"></a></li>
+        <li><img src="https://via.placeholder.com/360x580" alt="sedona-1"></li>
+        <li><img src="https://via.placeholder.com/358x578" alt="pink-1"></li>
+        <li><img src="https://via.placeholder.com/358x578" alt="barbershop-1"></li>
+        <li><img src="https://via.placeholder.com/358x578" alt="mishka-1"></li>
+        <li><img src="https://via.placeholder.com/358x578" alt="aplus-1"></li>
+        <li><img src="https://via.placeholder.com/358x578" alt="kvast-1"></li>
       </ul>
       <ul>
         <li><a>1</a></li>
@@ -68,9 +68,9 @@
     <section>
       <h2>Ссылки на социальные сети</h2>
       <ul>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="vk-icon"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="fb-icon"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="insta-icon"></a></li>
+        <li><a href=""></a></li><!--Здесь будет иконка vk-->
+        <li><a href=""></a></li><!--Здесь будет иконка facebook-->
+        <li><a href=""></a></li><!--Здесь будет иконка instagram-->
       </ul>
     </section>
     <p><b>Давайте дружить, это выгодно!</b></p>
