--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <section>
       <h2>Ссылки на социальные сети</h2>
       <ul>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="vk-icon"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="fb-icon"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/81x81" alt="insta-icon"></a></li>
+        <li><a href=""></a></li><!--Здесь будет иконка vk-->
+        <li><a href=""></a></li><!--Здесь будет иконка facebook-->
+        <li><a href=""></a></li><!--Здесь будет иконка instagram-->
       </ul>
     </section>
     <p><b>Давайте дружить, это выгодно!</b></p>
