Coздал и подключил style.css и normalize.css. Сделал стилизацию главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -34,8 +34,10 @@
         <li><a href="">По названию</a></li>
       </ul>
       <ul>
-        <li><a href=""></a></li><!--Здесь будет стрелка вниз-->
-        <li><a href=""></a></li><!--Здесь будет стрелка вверх-->
+        <li><a href=""></a></li>
+        <!--Здесь будет стрелка вниз-->
+        <li><a href=""></a></li>
+        <!--Здесь будет стрелка вверх-->
       </ul>
     </section>
     <section>
@@ -68,14 +70,24 @@
     <section>
       <h2>Ссылки на социальные сети</h2>
       <ul>
-        <li><a href=""></a></li><!--Здесь будет иконка vk-->
-        <li><a href=""></a></li><!--Здесь будет иконка facebook-->
-        <li><a href=""></a></li><!--Здесь будет иконка instagram-->
+        <li><a href=""></a></li>
+        <!--Здесь будет иконка vk-->
+        <li><a href=""></a></li>
+        <!--Здесь будет иконка facebook-->
+        <li><a href=""></a></li>
+        <!--Здесь будет иконка instagram-->
       </ul>
     </section>
     <p><b>Давайте дружить, это выгодно!</b></p>
     <p>Скидка 10% для друзей из социальных сетей</p>
   </footer>
+  <section class="modal-contact">
+    <h2 class="hidden">Форма обратной связи</h2>
+    <p>Напишите нам</p>
+    <!--Здесь будет форма-->
+    <button class="button modal-button-close">X</button>
+    <button class="button modal-button">Отправить</button>
+  </section>
 </body>
 
 </html>
