--- a/index.html
+++ b/index.html
@@ -1,108 +1,130 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>Дизайн-студия Нёрдс</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a><img src="https://via.placeholder.com/159x65" alt="nerds-logo"></a>
-      <ul>
+<body class="page-body">
+  <header class="page-header">
+    <nav class="page-navigation">
+      <a class="page-header-logo">
+        <img src="https://via.placeholder.com/159x65" alt="nerds-logo">
+      </a>
+      <ul class="site-navigaton">
         <li><a href="">Студия</a></li>
         <li><a href="">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="">Контакты</a></li>
       </ul>
-      <a href="">Корзина</a>
+      <div class="user-navigation">
+        <a class="shopping-cart-link" href="">Корзина</a>
+      </div>
     </nav>
   </header>
-  <main>
-    <h1>Дизайн-студия Hёрдс</h1>
-    <section>
-      <h2>Преимущества</h2>
-      <p><strong>Долго, дорого, скрупулезно</strong></p>
+  <main class="wrapper">
+    <h1 class="hidden">Дизайн-студия Hёрдс</h1>
+    <section class="advantages">
+      <h2 class="hidden">Преимущества</h2>
+      <p class="slogan"><strong>Долго, дорого, скрупулезно.</strong></p>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-      <a href="">Узнать больше</a>
+      <a class="button" href="">Узнать больше</a>
     </section>
-    <section>
-      <h2>Особенности</h2>
-      <ul>
-        <li>
+    <section class="features">
+      <h2 class="hidden">Особенности</h2>
+      <ul class="features-list">
+        <li class="features-list-item">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a href="catalog.html">Заказать</a>
+          <a class="button" href="catalog.html">Заказать</a>
         </li>
-        <li>
+        <li class="features-list-item">
           <h3>Приложения</h3>
           <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a href="catalog.html">Заказать</a>
+          <a class="button" href="catalog.html">Заказать</a>
         </li>
-        <li>
+        <li class="features-list-item">
           <h3>Презентации</h3>
           <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a href="catalog.html">Заказать</a>
+          <a class="button" href="catalog.html">Заказать</a>
         </li>
       </ul>
     </section>
-    <section>
-      <h2>О нас</h2>
+    <section class="about-us">
+      <h2 class="hidden">О нас</h2>
       <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
       <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
         рук, как роботы.</p>
-      <p><b>Выполняем заказы на разработку:</b></p>
-      <ul>
+      <p>Выполняем заказы на разработку:</p>
+      <ul class="services-list">
         <li>Веб-сайтов любой сложности</li>
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных прецентаций</li>
       </ul>
       <img src="https://via.placeholder.com/360x208" alt="nerds-illustration 1">
       <p>с 2004 года Любим точность во всем:</p>
-      <table>
+      <table class="features-table">
         <tr>
-          <td>146%</td>
-          <td>100%</td>
-          <td>50%</td>
+          <td class="data">146<span class="percent">%</span></td>
+          <td class="data">100<span class="percent">%</span></td>
+          <td class="data">50<span class="percent">%</span></td>
         </tr>
         <tr>
-          <td>Уровень самоотдачи</td>
-          <td>Соблюдение сроков</td>
-          <td>Минимальная предоплата</td>
+          <td class="text">Уровень самоотдачи</td>
+          <td class="text">Соблюдение сроков</td>
+          <td class="text">Минимальная предоплата</td>
         </tr>
       </table>
     </section>
-    <section>
-      <h2>Логотипы сайтов</h2>
-      <ul>
-        <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="https://via.placeholder.com/199x67" alt="logo-1"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/209x90" alt="logo-2"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/185x52" alt="logo-3"></a></li>
-        <li><a href=""><img src="https://via.placeholder.com/173x84" alt="logo-4"></a></li>
+    <section class="partners">
+      <h2 class="hidden">Логотипы сайтов</h2>
+      <ul class="partner-logo-list">
+        <li class="logo-list-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img class="nohover"
+              src="https://via.placeholder.com/199x67" alt="logo-1"></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/209x90"
+              alt="logo-2"></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/185x52"
+              alt="logo-3"></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/173x84"
+              alt="logo-4"></a></li>
       </ul>
     </section>
   </main>
-  <footer>
-    <section>
-      <h2>Как нас найти?</h2>
-      <p><b>NЁRDS DESIGN STUDIO</b></p>
-      <p>191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8</p>
-      <p>тел. +7 (812) 275-75-75</p>
-      <a href="">Напишите нам</a>
+  <footer class="page-footer">
+    <section class="footer-write-us">
+      <h2 class="hidden">Как нас найти?</h2>
+      <div class="contacts">
+        <p>NЁRDS DESIGN STUDIO</p>
+        <p>191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8</p>
+        <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+        <a class="button" href="">Напишите нам</a>
+      </div>
     </section>
-    <section>
-      <h2>Ссылки на социальные сети</h2>
-      <ul>
-        <li><a href=""></a></li><!--Здесь будет иконка vk-->
-        <li><a href=""></a></li><!--Здесь будет иконка facebook-->
-        <li><a href=""></a></li><!--Здесь будет иконка instagram-->
+    <section class="footer-social-link">
+      <h2 class="hidden">Ссылки на социальные сети</h2>
+      <ul class="social-link-list">
+        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <!--Здесь вместо текста будет  иконка vk-->
+        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <!--Здесь вместо текста будет иконка facebook-->
+        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <!--Здесь вместо текста будет иконка instagram-->
       </ul>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей</p>
     </section>
-    <p><b>Давайте дружить, это выгодно!</b></p>
-    <p>Скидка 10% для друзей из социальных сетей</p>
   </footer>
+  <section class="modal-contact">
+    <h2 class="hidden">Форма обратной связи</h2>
+    <p>Напишите нам</p>
+    <!--Здесь будет форма-->
+    <button class="button modal-button-close">X</button>
+    <button class="button modal-button">Отправить</button>
+  </section>
 </body>
 
 </html>
