--- a/catalog.html
+++ b/catalog.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Магазин</title>
+  <meta charset="utf-8">
+  <title>Дизайн-студия Нёрдс</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <header>
-    <nav>
-      <a><img src="https://via.placeholder.com/159x65" alt="nerds-logo"></a>
-      <ul>
-        <li><a href="index.html">Студия</a></li>
+<body class="page-body">
+  <header class="page-header">
+    <nav class="page-navigation">
+      <a class="page-header-logo" href="index.html">
+        <img src="https://via.placeholder.com/159x65" alt="nerds-logo">
+      </a>
+      <ul class="site-navigaton">
+        <li><a href="">Студия</a></li>
         <li><a href="">Клиенты</a></li>
-        <li><a>Магазин</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
         <li><a href="">Контакты</a></li>
       </ul>
-      <a href="">Корзина</a>
+      <div class="user-navigation">
+        <a class="shopping-cart-link" href="">Корзина</a>
+      </div>
     </nav>
   </header>
-  <main>
-    <h1>Магазин готовых шаблонов</h1>
-    <section>
-      <h2>Фильтр товаров</h2>
+  <main class="wrapper">
+    <div class="title-block">
+      <h1>Магазин готовых шаблонов</h1>
+    </div>
+    <section class="filter-produts">
+      <h2 class="hidden">Фильтр товаров</h2>
       <!--Здесь будет форма-->
     </section>
-    <section>
-      <h2>Сортировка</h2>
+    <section class="sorting-products">
+      <h2 class="hidden">Сортировка</h2>
       <p>Сортировать:</p>
-      <ul>
-        <li><a href="">По цене</a></li>
+      <ul class="list-sorting-products">
+        <li><a class="here" href="">По цене</a></li>
         <li><a href="">По типу </a></li>
         <li><a href="">По названию</a></li>
       </ul>
-      <ul>
-        <li><a href=""></a></li>
+      <ul class="list-sorting-arrows">
+        <li><a href="">down</a></li>
         <!--Здесь будет стрелка вниз-->
-        <li><a href=""></a></li>
+        <li><a href="">up</a></li>
         <!--Здесь будет стрелка вверх-->
       </ul>
     </section>
-    <section>
-      <h2>Список товаров</h2>
-      <ul>
+    <section class="list-products-section">
+      <h2 class="hidden">Список товаров</h2>
+      <ul class="list-view-products">
         <li><img src="https://via.placeholder.com/360x580" alt="sedona-1"></li>
         <li><img src="https://via.placeholder.com/358x578" alt="pink-1"></li>
         <li><img src="https://via.placeholder.com/358x578" alt="barbershop-1"></li>
@@ -50,36 +58,38 @@
         <li><img src="https://via.placeholder.com/358x578" alt="aplus-1"></li>
         <li><img src="https://via.placeholder.com/358x578" alt="kvast-1"></li>
       </ul>
-      <ul>
-        <li><a>1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
-        <li><a href="">Следующая</a></li>
+      <ul class="list-page-button">
+        <li>1</li>
+        <li><a class="button" href="">2</a></li>
+        <li><a class="button" href="">3</a></li>
+        <li><a class="button" href="">Следующая</a></li>
       </ul>
     </section>
   </main>
-  <footer>
-    <section>
-      <h2>Как нас найти?</h2>
-      <p><b>NЁRDS DESIGN STUDIO</b></p>
-      <p>191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8</p>
-      <p>тел. +7 (812) 275-75-75</p>
-      <a href="">Напишите нам</a>
+  <footer class="page-footer">
+    <section class="footer-write-us">
+      <h2 class="hidden">Как нас найти?</h2>
+      <div class="contacts">
+        <p>NЁRDS DESIGN STUDIO</p>
+        <p>191186, Санкт-Петербург,<br>
+          ул. Б. Конюшенная, д. 19/8</p>
+        <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+        <a class="button" href="">Напишите нам</a>
+      </div>
     </section>
-    <section>
-      <h2>Ссылки на социальные сети</h2>
-      <ul>
-        <li><a href=""></a></li>
-        <!--Здесь будет иконка vk-->
-        <li><a href=""></a></li>
-        <!--Здесь будет иконка facebook-->
-        <li><a href=""></a></li>
-        <!--Здесь будет иконка instagram-->
+    <section class="footer-social-link">
+      <h2 class="hidden">Ссылки на социальные сети</h2>
+      <ul class="social-link-list">
+        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <!--Здесь вместо текста будет  иконка vk-->
+        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <!--Здесь вместо текста будет иконка facebook-->
+        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <!--Здесь вместо текста будет иконка instagram-->
       </ul>
+      <p>Давайте дружить, это выгодно!</p>
+      <p>Скидка 10% для друзей из социальных сетей</p>
     </section>
-    <p><b>Давайте дружить, это выгодно!</b></p>
-    <p>Скидка 10% для друзей из социальных сетей</p>
   </footer>
   <section class="modal-contact">
     <h2 class="hidden">Форма обратной связи</h2>
