--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <nav class="page-navigation">
       <a class="page-header-logo">
-        <img src="https://via.placeholder.com/159x65" alt="nerds-logo">
+        <img src="img/nerds-logo.svg" width="159.87" height="65.02" alt="Логотип сайта">
       </a>
       <ul class="site-navigaton">
         <li><a href="">Студия</a></li>
@@ -64,7 +64,7 @@
         <li>Мобильных приложений для iOS и Android</li>
         <li>Слайдшоу и видео для корпоративных прецентаций</li>
       </ul>
-      <img src="https://via.placeholder.com/360x208" alt="nerds-illustration 1">
+      <img src="img/nerds-illustration 1.png" width="360" height="280" alt="">
       <p>с 2004 года Любим точность во всем:</p>
       <table class="features-table">
         <tr>
@@ -83,13 +83,13 @@
       <h2 class="hidden">Логотипы сайтов</h2>
       <ul class="partner-logo-list">
         <li class="logo-list-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img class="nohover"
-              src="https://via.placeholder.com/199x67" alt="logo-1"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/209x90"
-              alt="logo-2"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/185x52"
-              alt="logo-3"></a></li>
-        <li class="logo-list-item"><a href=""><img class="nohover" src="https://via.placeholder.com/173x84"
-              alt="logo-4"></a></li>
+              src="img/logo-1 1.svg" width="199" height="67.82" alt="Логотип сайта HTML Academy"></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-2 1.png" width="208" height="90"
+              alt="Логотип сайта Barbershop Borodinski"></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-3 1.png" width="185" height="52"
+              alt="Логотип сайта Pink "></a></li>
+        <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-4 1.png" width="173" height="84"
+              alt="Логотип сайта Mishka"></a></li>
       </ul>
     </section>
   </main>
