Исправил размеры некоторых изображений. Устранил ошибки именования файлов

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header class="page-header">
     <nav class="page-navigation">
       <a class="page-header-logo" href="index.html">
-        <img src="img/nerds-logo.svg" width="159.87px" height="65.02px" alt="Логотип сайта NERD'S">
+        <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта NERD'S">
       </a>
       <ul class="site-navigaton">
         <li><a href="">Студия</a></li>
@@ -51,12 +51,12 @@
     <section class="list-products-section">
       <h2 class="hidden">Список товаров</h2>
       <ul class="list-view-products">
-        <li><img src="img/img-sedona 1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
-        <li><img src="img/img-pink 1.jpg" width="358" height="576" alt="Миниатюра страницы PINK"></li>
-        <li><img src="img/img-barbershop 1.jpg" width="364" height="582" alt="Миниатюра страницы Barbershop"></li>
-        <li><img src="img/img-mishka 1.jpg" width="358" height="573" alt="Миниатюра страницы MISHKA"></li>
-        <li><img src="img/img-aplus 1.jpg" width="358" height="572,41" alt="Миниатюра страницы Aplus"></li>
-        <li><img src="img/img-kvast 1.jpg" width="358" height="573,59" alt="Миниатюра страницы KVAST"></li>
+        <li><img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
+        <li><img src="img/img-pink-1.jpg" width="358" height="576" alt="Миниатюра страницы PINK"></li>
+        <li><img src="img/img-barbershop-1.jpg" width="364" height="582" alt="Миниатюра страницы Barbershop"></li>
+        <li><img src="img/img-mishka-1.jpg" width="358" height="573" alt="Миниатюра страницы MISHKA"></li>
+        <li><img src="img/img-aplus-1.jpg" width="358" height="572" alt="Миниатюра страницы Aplus"></li>
+        <li><img src="img/img-kvast-1.jpg" width="358" height="573" alt="Миниатюра страницы KVAST"></li>
       </ul>
       <ul class="list-page-button">
         <li>1</li>
