Сделал сетку на grid

--- a/index.html
+++ b/index.html
@@ -9,32 +9,49 @@
 </head>
 
 <body class="page-body">
+
   <header class="page-header">
+
     <nav class="page-navigation">
+
       <a class="page-header-logo">
         <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
       </a>
+
       <ul class="site-navigaton">
         <li><a href="">Студия</a></li>
         <li><a href="">Клиенты</a></li>
         <li><a href="catalog.html">Магазин</a></li>
         <li><a href="">Контакты</a></li>
       </ul>
+
       <div class="user-navigation">
         <a class="shopping-cart-link" href="">Корзина</a>
       </div>
+
     </nav>
+
   </header>
-  <main class="wrapper">
+
+  <main class="main-wrapper">
+
     <h1 class="hidden">Дизайн-студия Hёрдс</h1>
-    <section class="advantages">
-      <h2 class="hidden">Преимущества</h2>
-      <p class="slogan"><strong>Долго, дорого, скрупулезно.</strong></p>
-      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-      <a class="button" href="">Узнать больше</a>
-    </section>
+
+    <div class="advantages-container"> 
+
+      <section class="advantages">
+        <h2 class="hidden">Преимущества</h2>
+        <p class="slogan"><strong>Долго, дорого, скрупулезно.</strong></p>
+        <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+        <a class="button" href="">Узнать больше</a>
+      </section>
+
+    </div>
+
     <section class="features">
+
       <h2 class="hidden">Особенности</h2>
+
       <ul class="features-list">
         <li class="features-list-item">
           <h3>Веб-сайты</h3>
@@ -52,35 +69,48 @@
           <a class="button" href="catalog.html">Заказать</a>
         </li>
       </ul>
+
     </section>
+
     <section class="about-us">
+
       <h2 class="hidden">О нас</h2>
-      <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-      <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
-        рук, как роботы.</p>
-      <p>Выполняем заказы на разработку:</p>
-      <ul class="services-list">
-        <li>Веб-сайтов любой сложности</li>
-        <li>Мобильных приложений для iOS и Android</li>
-        <li>Слайдшоу и видео для корпоративных прецентаций</li>
-      </ul>
-      <img src="img/nerds-illustration-1.png" width="360" height="280" alt="">
-      <p>с 2004 года Любим точность во всем:</p>
-      <table class="features-table">
-        <tr>
-          <td class="data">146<span class="percent">%</span></td>
-          <td class="data">100<span class="percent">%</span></td>
-          <td class="data">50<span class="percent">%</span></td>
-        </tr>
-        <tr>
-          <td class="text">Уровень самоотдачи</td>
-          <td class="text">Соблюдение сроков</td>
-          <td class="text">Минимальная предоплата</td>
-        </tr>
-      </table>
+
+      <div class="about-us-left-column">
+        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+          рук, как роботы.</p>
+        <p>Выполняем заказы на разработку:</p>
+        <ul class="services-list">
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных прецентаций</li>
+        </ul>
+      </div>
+
+      <div class="about-us-left-column">
+        <img src="img/nerds-illustration-1.png" width="360" height="280" alt="">
+        <p>с 2004 года Любим точность во всем:</p>
+        <table class="features-table">
+          <tr>
+            <td class="data">146<span class="percent">%</span></td>
+            <td class="data">100<span class="percent">%</span></td>
+            <td class="data">50<span class="percent">%</span></td>
+          </tr>
+          <tr>
+            <td class="text">Уровень самоотдачи</td>
+            <td class="text">Соблюдение сроков</td>
+            <td class="text">Минимальная предоплата</td>
+          </tr>
+        </table>
+      </div>
+
     </section>
+
     <section class="partners">
+
       <h2 class="hidden">Логотипы сайтов</h2>
+
       <ul class="partner-logo-list">
         <li class="logo-list-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img class="nohover"
               src="img/logo-1-1.svg" width="199" height="67" alt="Логотип сайта HTML Academy"></a></li>
@@ -91,40 +121,61 @@
         <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-4-1.png" width="173" height="84"
               alt="Логотип сайта Mishka"></a></li>
       </ul>
+      
     </section>
+
   </main>
+
   <footer class="page-footer">
+
     <section class="footer-write-us">
+
       <h2 class="hidden">Как нас найти?</h2>
-      <div class="contacts">
-        <p>NЁRDS DESIGN STUDIO</p>
-        <p>191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8</p>
-        <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-        <a class="button" href="">Напишите нам</a>
+
+      <div class="contacts-container">
+        <div class="contacts">
+          <p>NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</p>
+          <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <a class="button" href="">Напишите нам</a>
+        </div>
       </div>
+
     </section>
+
     <section class="footer-social-link">
+
       <h2 class="hidden">Ссылки на социальные сети</h2>
-      <ul class="social-link-list">
-        <li class="link-list-item"><a class="button" href="">VK</a></li>
-        <!--Здесь вместо текста будет  иконка vk-->
-        <li class="link-list-item"><a class="button" href="">FB</a></li>
-        <!--Здесь вместо текста будет иконка facebook-->
-        <li class="link-list-item"><a class="button" href="">Insta</a></li>
-        <!--Здесь вместо текста будет иконка instagram-->
-      </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей</p>
+
+      <div class="social-link-list-container">
+        <ul class="social-link-list">
+          <li class="link-list-item"><a class="button" href="">VK</a></li>
+          <!--Здесь вместо текста будет  иконка vk-->
+          <li class="link-list-item"><a class="button" href="">FB</a></li>
+          <!--Здесь вместо текста будет иконка facebook-->
+          <li class="link-list-item"><a class="button" href="">Insta</a></li>
+          <!--Здесь вместо текста будет иконка instagram-->
+        </ul>
+      </div>
+
+      <div class="footer-social-text-container">
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </div>
+
     </section>
+
   </footer>
+
   <section class="modal-contact">
     <h2 class="hidden">Форма обратной связи</h2>
     <p>Напишите нам</p>
     <!--Здесь будет форма-->
     <button class="button modal-button-close">X</button>
     <button class="button modal-button">Отправить</button>
-  </section>
+  </section> 
+
 </body>
 
 </html>
