Внес правки согласно замечаниям наставника

--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 
   <header class="page-header">
 
-    <nav class="page-navigation">
+    <div class="page-navigation-container">
 
-      <a class="page-header-logo">
-        <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
-      </a>
+      <nav class="page-navigation">
 
-      <ul class="site-navigaton">
-        <li><a href="">Студия</a></li>
-        <li><a href="">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
+        <a class="page-header-logo">
+          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
+        </a>
 
-      <div class="user-navigation">
-        <a class="shopping-cart-link" href="">Корзина</a>
-      </div>
+        <ul class="site-navigaton">
+          <li><a href="">Студия</a></li>
+          <li><a href="">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
 
-    </nav>
+        <div class="user-navigation">
+          <a class="shopping-cart-link" href="">Корзина</a>
+        </div>
+
+      </nav>
+
+    </div>
 
   </header>
 
@@ -37,7 +41,7 @@
 
     <h1 class="hidden">Дизайн-студия Hёрдс</h1>
 
-    <div class="advantages-container"> 
+    <div class="advantages-container">
 
       <section class="advantages">
         <h2 class="hidden">Преимущества</h2>
@@ -48,7 +52,7 @@
 
     </div>
 
-    <section class="features">
+    <section class="features container">
 
       <h2 class="hidden">Особенности</h2>
 
@@ -72,13 +76,14 @@
 
     </section>
 
-    <section class="about-us">
+    <section class="about-us container">
 
       <h2 class="hidden">О нас</h2>
 
       <div class="about-us-left-column">
         <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не
+          покладая
           рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
         <ul class="services-list">
@@ -107,7 +112,7 @@
 
     </section>
 
-    <section class="partners">
+    <section class="partners container">
 
       <h2 class="hidden">Логотипы сайтов</h2>
 
@@ -121,8 +126,10 @@
         <li class="logo-list-item"><a href=""><img class="nohover" src="img/logo-4-1.png" width="173" height="84"
               alt="Логотип сайта Mishka"></a></li>
       </ul>
-      
+
     </section>
+
+
 
   </main>
 
@@ -174,7 +181,7 @@
     <!--Здесь будет форма-->
     <button class="button modal-button-close">X</button>
     <button class="button modal-button">Отправить</button>
-  </section> 
+  </section>
 
 </body>
 
