--- a/catalog.html
+++ b/catalog.html
@@ -10,94 +10,143 @@
 
 <body class="page-body">
   <header class="page-header">
-    <nav class="page-navigation">
-      <a class="page-header-logo" href="index.html">
-        <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта NERD'S">
-      </a>
-      <ul class="site-navigaton">
-        <li><a href="">Студия</a></li>
-        <li><a href="">Клиенты</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
-        <li><a href="">Контакты</a></li>
-      </ul>
-      <div class="user-navigation">
-        <a class="shopping-cart-link" href="">Корзина</a>
-      </div>
-    </nav>
+    
+    <div class="page-navigation-container">
+
+      <nav class="page-navigation">
+
+        <a class="page-header-logo" href="index.html">
+          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
+        </a>
+
+        <ul class="site-navigaton">
+          <li><a href="index.html">Студия</a></li>
+          <li><a href="">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+
+        <div class="user-navigation">
+          <a class="shopping-cart-link" href="">Корзина</a>
+        </div>
+    
+      </nav>
+
+    </div>
+
   </header>
-  <main class="wrapper">
+
+  <main class="main-wrapper">
+
     <div class="title-block">
       <h1>Магазин готовых шаблонов</h1>
     </div>
-    <section class="filter-produts">
-      <h2 class="hidden">Фильтр товаров</h2>
-      <!--Здесь будет форма-->
-    </section>
-    <section class="sorting-products">
-      <h2 class="hidden">Сортировка</h2>
-      <p>Сортировать:</p>
-      <ul class="list-sorting-products">
-        <li><a class="here" href="">По цене</a></li>
-        <li><a href="">По типу </a></li>
-        <li><a href="">По названию</a></li>
-      </ul>
-      <ul class="list-sorting-arrows">
-        <li><a href="">down</a></li>
-        <!--Здесь будет стрелка вниз-->
-        <li><a href="">up</a></li>
-        <!--Здесь будет стрелка вверх-->
-      </ul>
-    </section>
-    <section class="list-products-section">
-      <h2 class="hidden">Список товаров</h2>
-      <ul class="list-view-products">
-        <li><img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
-        <li><img src="img/img-pink-1.jpg" width="358" height="576" alt="Миниатюра страницы PINK"></li>
-        <li><img src="img/img-barbershop-1.jpg" width="364" height="582" alt="Миниатюра страницы Barbershop"></li>
-        <li><img src="img/img-mishka-1.jpg" width="358" height="573" alt="Миниатюра страницы MISHKA"></li>
-        <li><img src="img/img-aplus-1.jpg" width="358" height="572" alt="Миниатюра страницы Aplus"></li>
-        <li><img src="img/img-kvast-1.jpg" width="358" height="573" alt="Миниатюра страницы KVAST"></li>
-      </ul>
-      <ul class="list-page-button">
-        <li>1</li>
-        <li><a class="button" href="">2</a></li>
-        <li><a class="button" href="">3</a></li>
-        <li><a class="button" href="">Следующая</a></li>
-      </ul>
-    </section>
+
+    <div class="products-container">
+
+      <section class="filter-produts">
+
+        <h2 class="hidden">Фильтр товаров</h2>
+
+        <!--Здесь будет форма-->
+      </section>
+
+      <section class="sorting-products">
+
+        <h2 class="hidden">Сортировка</h2>
+
+        <p>Сортировать:</p>
+
+        <ul class="list-sorting-products">
+          <li><a class="here" href="">По цене</a></li>
+          <li><a href="">По типу </a></li>
+          <li><a href="">По названию</a></li>
+        </ul>
+        <ul class="list-sorting-arrows">
+          <li><a href="">down</a></li>
+          <!--Здесь будет стрелка вниз-->
+          <li><a href="">up</a></li>
+          <!--Здесь будет стрелка вверх-->
+        </ul>
+
+      </section>
+
+      <section class="list-products-section">
+
+        <h2 class="hidden">Список товаров</h2>
+
+        <ul class="list-view-products">
+          <li><img src="img/img-sedona-1.jpg" width="358" height="576" alt="Миниатюра страницы SEDONA"></li>
+          <li><img src="img/img-pink-1.jpg" width="358" height="576" alt="Миниатюра страницы PINK"></li>
+          <li><img src="img/img-barbershop-1.jpg" width="364" height="582" alt="Миниатюра страницы Barbershop"></li>
+          <li><img src="img/img-mishka-1.jpg" width="358" height="573" alt="Миниатюра страницы MISHKA"></li>
+          <li><img src="img/img-aplus-1.jpg" width="358" height="572" alt="Миниатюра страницы Aplus"></li>
+          <li><img src="img/img-kvast-1.jpg" width="358" height="573" alt="Миниатюра страницы KVAST"></li>
+        </ul>
+
+        <ul class="list-page-button">
+          <li>1</li>
+          <li><a class="button" href="">2</a></li>
+          <li><a class="button" href="">3</a></li>
+          <li><a class="button" href="">Следующая</a></li>
+        </ul>
+
+      </section>
+
+    </div>
   </main>
   <footer class="page-footer">
+
     <section class="footer-write-us">
+
       <h2 class="hidden">Как нас найти?</h2>
-      <div class="contacts">
-        <p>NЁRDS DESIGN STUDIO</p>
-        <p>191186, Санкт-Петербург,<br>
-          ул. Б. Конюшенная, д. 19/8</p>
-        <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
-        <a class="button" href="">Напишите нам</a>
+
+      <div class="contacts-container">
+        <div class="contacts">
+          <p>NЁRDS DESIGN STUDIO</p>
+          <p>191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</p>
+          <p><a class="telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a></p>
+          <a class="button" href="">Напишите нам</a>
+        </div>
       </div>
+
     </section>
+
     <section class="footer-social-link">
+
       <h2 class="hidden">Ссылки на социальные сети</h2>
-      <ul class="social-link-list">
-        <li class="link-list-item"><a class="button" href="">VK</a></li>
-        <!--Здесь вместо текста будет  иконка vk-->
-        <li class="link-list-item"><a class="button" href="">FB</a></li>
-        <!--Здесь вместо текста будет иконка facebook-->
-        <li class="link-list-item"><a class="button" href="">Insta</a></li>
-        <!--Здесь вместо текста будет иконка instagram-->
-      </ul>
-      <p>Давайте дружить, это выгодно!</p>
-      <p>Скидка 10% для друзей из социальных сетей</p>
+
+      <div class="social-link-list-container">
+        <ul class="social-link-list">
+          <li class="link-list-item"><a class="button" href="">VK</a></li>
+          <!--Здесь вместо текста будет  иконка vk-->
+          <li class="link-list-item"><a class="button" href="">FB</a></li>
+          <!--Здесь вместо текста будет иконка facebook-->
+          <li class="link-list-item"><a class="button" href="">Insta</a></li>
+          <!--Здесь вместо текста будет иконка instagram-->
+        </ul>
+      </div>
+
+      <div class="footer-social-text-container">
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей</p>
+      </div>
+
     </section>
+
   </footer>
   <section class="modal-contact">
+
     <h2 class="hidden">Форма обратной связи</h2>
+  
     <p>Напишите нам</p>
     <!--Здесь будет форма-->
     <button class="button modal-button-close">X</button>
     <button class="button modal-button">Отправить</button>
+
   </section>
+  
 </body>
 
 </html>
