Переделал сетку главной страницы с помощью флексов

--- a/catalog.html
+++ b/catalog.html
@@ -113,7 +113,7 @@
 
     </section>
 
-    <section class="footer-social-link">
+    <section class="footer-social-link container">
 
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
