--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
 
       <div class="about-us-left-column">
         <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не
-          покладая
-          рук, как роботы.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
         <p>Выполняем заказы на разработку:</p>
         <ul class="services-list">
           <li>Веб-сайтов любой сложности</li>
@@ -93,9 +92,9 @@
         </ul>
       </div>
 
-      <div class="about-us-left-column">
+      <div class="about-us-right-column">
         <img src="img/nerds-illustration-1.png" width="360" height="280" alt="">
-        <p>с 2004 года Любим точность во всем:</p>
+        <p>с 2004 года любим точность во всем:</p>
         <table class="features-table">
           <tr>
             <td class="data">146<span class="percent">%</span></td>
@@ -151,7 +150,7 @@
 
     </section>
 
-    <section class="footer-social-link">
+    <section class="footer-social-link container">
 
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
@@ -177,11 +176,11 @@
 
   <section class="modal-contact">
     <h2 class="hidden">Форма обратной связи</h2>
-    <p>Напишите нам</p>
+    <p>Напишите нам</p> 
     <!--Здесь будет форма-->
     <button class="button modal-button-close">X</button>
     <button class="button modal-button">Отправить</button>
-  </section>
+  </section> 
 
 </body>
 
