Переделал сетку index и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 
 <body class="page-body">
   <header class="page-header">
-    
+
     <div class="page-navigation-container">
 
       <nav class="page-navigation">
@@ -29,7 +29,7 @@
         <div class="user-navigation">
           <a class="shopping-cart-link" href="">Корзина</a>
         </div>
-    
+
       </nav>
 
     </div>
@@ -42,9 +42,9 @@
       <h1>Магазин готовых шаблонов</h1>
     </div>
 
-    <div class="products-container">
+    <div class="products container">
 
-      <section class="filter-produts">
+      <section class="filter-products">
 
         <h2 class="hidden">Фильтр товаров</h2>
 
@@ -63,15 +63,14 @@
           <li><a href="">По названию</a></li>
         </ul>
         <ul class="list-sorting-arrows">
-          <li><a href="">down</a></li>
+          <li><a href="">*</a></li>
           <!--Здесь будет стрелка вниз-->
-          <li><a href="">up</a></li>
+          <li><a href="">*</a></li>
           <!--Здесь будет стрелка вверх-->
         </ul>
-
       </section>
 
-      <section class="list-products-section">
+      <section class="list-products">
 
         <h2 class="hidden">Список товаров</h2>
 
@@ -95,6 +94,7 @@
 
     </div>
   </main>
+
   <footer class="page-footer">
 
     <section class="footer-write-us">
@@ -117,18 +117,16 @@
 
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
-      <div class="social-link-list-container">
-        <ul class="social-link-list">
-          <li class="link-list-item"><a class="button" href="">VK</a></li>
-          <!--Здесь вместо текста будет  иконка vk-->
-          <li class="link-list-item"><a class="button" href="">FB</a></li>
-          <!--Здесь вместо текста будет иконка facebook-->
-          <li class="link-list-item"><a class="button" href="">Insta</a></li>
-          <!--Здесь вместо текста будет иконка instagram-->
-        </ul>
-      </div>
+      <ul class="social-link-list">
+        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <!--Здесь вместо текста будет  иконка vk-->
+        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <!--Здесь вместо текста будет иконка facebook-->
+        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <!--Здесь вместо текста будет иконка instagram-->
+      </ul>
 
-      <div class="footer-social-text-container">
+      <div class="footer-social-text">
         <p>Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
@@ -136,17 +134,7 @@
     </section>
 
   </footer>
-  <section class="modal-contact">
 
-    <h2 class="hidden">Форма обратной связи</h2>
-  
-    <p>Напишите нам</p>
-    <!--Здесь будет форма-->
-    <button class="button modal-button-close">X</button>
-    <button class="button modal-button">Отправить</button>
-
-  </section>
-  
 </body>
 
 </html>
