--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
       <nav class="page-navigation">
 
-        <a class="page-header-logo">
-          <img src="img/nerds-logo.svg" width="159" height="65" alt="Логотип сайта">
-        </a>
+          <a class="page-header-logo" href="">
+            <img src="img/nerds-logo.svg" width="160" height="66" alt="Логотип сайта">
+          </a>
 
         <ul class="site-navigaton">
           <li><a href="">Студия</a></li>
@@ -154,18 +154,16 @@
 
       <h2 class="hidden">Ссылки на социальные сети</h2>
 
-      <div class="social-link-list-container">
-        <ul class="social-link-list">
-          <li class="link-list-item"><a class="button" href="">VK</a></li>
-          <!--Здесь вместо текста будет  иконка vk-->
-          <li class="link-list-item"><a class="button" href="">FB</a></li>
-          <!--Здесь вместо текста будет иконка facebook-->
-          <li class="link-list-item"><a class="button" href="">Insta</a></li>
-          <!--Здесь вместо текста будет иконка instagram-->
-        </ul>
-      </div>
+      <ul class="social-link-list">
+        <li class="link-list-item"><a class="button" href="">VK</a></li>
+        <!--Здесь вместо текста будет  иконка vk-->
+        <li class="link-list-item"><a class="button" href="">FB</a></li>
+        <!--Здесь вместо текста будет иконка facebook-->
+        <li class="link-list-item"><a class="button" href="">Insta</a></li>
+        <!--Здесь вместо текста будет иконка instagram-->
+      </ul>
 
-      <div class="footer-social-text-container">
+      <div class="footer-social-text">
         <p>Давайте дружить, это выгодно!</p>
         <p>Скидка 10% для друзей из социальных сетей</p>
       </div>
@@ -176,11 +174,11 @@
 
   <section class="modal-contact">
     <h2 class="hidden">Форма обратной связи</h2>
-    <p>Напишите нам</p> 
+    <p>Напишите нам</p>
     <!--Здесь будет форма-->
     <button class="button modal-button-close">X</button>
     <button class="button modal-button">Отправить</button>
-  </section> 
+  </section>
 
 </body>
 
